# visuia

./: README.md  gitignore.gitignore  pyproject.toml
examples/: demo.py
uivision_agent/: __init__.py  app.py  click.py  export.py  input.py  wait.py
uivision_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
