[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uivision-agent"
version = "0.1.0"
description = "Vision-based GUI automation for black-box software"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "YRD", email = "yanrui.du@vub.be" }
]

dependencies = [
    "opencv-python",
    "pyautogui",
    "pywinauto",
    "numpy"
]
